[package]
name = "rs_comic_shrinker"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/racine-p-a/rs_comic_shrinker"
readme = "README.md"
keywords = ["comics", "bd", "manga", "cbr", "cbz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unrar = "0.4.4"
zip = "0.6.2"
walkdir = "2.3.2"
image = "0.24.2"
webp = "0.2"
rand = "0.8.5"